Change prefix, and update version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="width: 50%;" >
-    <niv-image-viewer  [src]="images"></niv-image-viewer>
+    <ngx-image-viewer  [src]="images"></ngx-image-viewer>
 </div>
