--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="display: flex">
-  <div style="width: 50%;">
+  <div style="width: 50%; display: flex">
     <ngx-image-viewer [src]="images"
                       [(config)]="config"
-                      [(index)]="imageIndex"
+                      [(index)]="imageIndexOne"
+                      (customEvent)="handleEvent($event)">
+    </ngx-image-viewer>
+
+    <ngx-image-viewer [src]="images"
+                      [(config)]="config"
+                      [(index)]="imageIndexTwo"
                       (customEvent)="handleEvent($event)">
     </ngx-image-viewer>
 </div>
