--- a/src/app/image-viewer/image-viewer.component.html
+++ b/src/app/image-viewer/image-viewer.component.html
@@ -1,8 +1,11 @@
 <div [ngxToggleFullscreen]="fullscreen" class="img-container" [style.backgroundColor]="config.containerBackgroundColor"
      (wheel)="scrollZoom($event)" (dragover)="onDragOver($event)">
-  <img [src]="src[index]" [ngStyle]="style" alt="Image not found..." (dragstart)="onDragStart($event)" />
+  <img [src]="src[index]" [ngStyle]="style" alt="Image not found..." (dragstart)="onDragStart($event)" (load)="onLoad()" (loadstart)="onLoadStart()"/>
   <!-- Div below will be used to hide the 'ghost' image when dragging -->
   <div></div>
+  <div class="spinner-container" *ngIf="loading">
+    <div class="spinner"></div>
+  </div>
 
   <button [class]="config.btnClass" *ngIf="config.btnShow.rotateCounterClockwise" (click)="rotateCounterClockwise()">
     <span [class]="config.btnIcons.rotateCounterClockwise"></span>
